dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/globals.h)
AM_INIT_AUTOMAKE(snts, 1.0.4)
AM_CONFIG_HEADER(config.h)



dnl Checks for programs.
AC_PROG_AWK 
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC


dnl Checks for libraries.
AC_FUNC_GETMNTENT
AC_ISC_POSIX
dnl AC_MINIX
dnl AC_AIX


dnl AC_SYS_INTERPRETER
dnl AC_CYGWIN
#AC_C_BIGENDIAN


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(select socket strtol)

AC_OUTPUT(Makefile src/Makefile)
